force-app/main/default/objects/os_Closing__c/fields/os_Development_Projects_Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>os_Development_Projects_Unit_Number__c</fullName>
    <formula>os_Winning_Inquiry__r.os_ATR_Unit_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Development Projects Unit Number</label>
    <type>Text</type>
</CustomField>