force-app/main/default/objects/os_Closing__c/fields/os_Develpment_Projects_Fee_Status__c.field-meta.xml
<CustomField>
    <fullName>os_Develpment_Projects_Fee_Status__c</fullName>
    <label>Develpment Projects Fee Status(OLD)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0%</fullName>
            </value>
            <value>
                <fullName>10%</fullName>
            </value>
            <value>
                <fullName>10% + 4%</fullName>
            </value>
            <value>
                <fullName>100%</fullName>
            </value>
            <value>
                <fullName>100% + 4%</fullName>
            </value>
            <value>
                <fullName>20% + 4% received by Developer</fullName>
            </value>
            <value>
                <fullName>20% + 4% sent to Developer</fullName>
            </value>
            <value>
                <fullName>5%</fullName>
            </value>
            <value>
                <fullName>5% In Progress</fullName>
            </value>
            <value>
                <fullName>EOI &amp; Document received, Payment Missing</fullName>
            </value>
            <value>
                <fullName>EOI &amp; Payment received, Document Missing</fullName>
            </value>
            <value>
                <fullName>EOI Created</fullName>
            </value>
            <value>
                <fullName>EOI Received</fullName>
            </value>
            <value>
                <fullName>Payment Received, EOI &amp; Document Missing</fullName>
            </value>
            <value>
                <fullName>RA and SPA Pending with Ithra</fullName>
            </value>
            <value>
                <fullName>Reservation</fullName>
            </value>
            <value>
                <fullName>20%</fullName>
            </value>
            <value>
                <fullName>30%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>