force-app/main/default/objects/os_Closing__c/fields/os_Develpment_Projects_Outcome_Date__c.field-meta.xml
<CustomField>
    <fullName>os_Develpment_Projects_Outcome_Date__c</fullName>
    <label>Develpment Projects Outcome Date(OLD)</label>
    <type>DateTime</type>
</CustomField>