force-app/main/default/objects/os_Closing__c/fields/os_Develpment_Projects_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>os_Develpment_Projects_Payment_Status__c</fullName>
    <label>Develpment Projects Payment Status(OLD)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paid to Agency</fullName>
            </value>
            <value>
                <fullName>Paid to LSIR</fullName>
            </value>
            <value>
                <fullName>Not paid to Agency</fullName>
            </value>
            <value>
                <fullName>Not paid to LSIR</fullName>
            </value>
            <value>
                <fullName>Paid to LSIR and Agency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>