force-app/main/default/objects/os_Closing__c/fields/os_Dld_Fee__c.field-meta.xml
<CustomField>
    <fullName>os_Dld_Fee__c</fullName>
    <formula>(4*  os_Unit__r.os_Sales_Price__c  )/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dld Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>