force-app/main/default/objects/os_Closing__c/fields/os_DLD_Fee_Collected__c.field-meta.xml
<CustomField>
    <fullName>os_DLD_Fee_Collected__c</fullName>
    <label>DLD Fee Collected</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>