force-app/main/default/objects/os_Closing__c/fields/os_DLD_Fee_collectedPercentage__c.field-meta.xml
<CustomField>
    <fullName>os_DLD_Fee_collectedPercentage__c</fullName>
    <formula>( os_DLD_Fee_Collected__c / os_Dld_Fee__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DLD Fee collected (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>