force-app/main/default/objects/os_Closing__c/fields/os_Documentation_Check_In_Process__c.field-meta.xml
<CustomField>
    <fullName>os_Documentation_Check_In_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documentation Check In Process</label>
    <type>Checkbox</type>
</CustomField>