force-app/main/default/objects/os_Closing__c/fields/os_Documentation_Check_Not_Approved__c.field-meta.xml
<CustomField>
    <fullName>os_Documentation_Check_Not_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documentation Check Not Approved</label>
    <type>Checkbox</type>
</CustomField>