force-app/main/default/objects/os_Closing__c/fields/os_Ejari_Completed__c.field-meta.xml
<CustomField>
    <fullName>os_Ejari_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ejari Completed</label>
    <type>Checkbox</type>
</CustomField>