force-app/main/default/objects/os_Closing__c/fields/os_EP_Admin_Comments__c.field-meta.xml
<CustomField>
    <fullName>os_EP_Admin_Comments__c</fullName>
    <label>EP Admin Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>