force-app/main/default/objects/os_Closing__c/fields/os_EP_Closing_Broker__c.field-meta.xml
<CustomField>
    <fullName>os_EP_Closing_Broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EP Closing Broker</label>
    <referenceTo>User</referenceTo>
    <relationshipName>EPClosingBroker</relationshipName>
    <type>Lookup</type>
</CustomField>