force-app/main/default/objects/os_Closing__c/fields/os_EP_Commission__c.field-meta.xml
<CustomField>
    <fullName>os_EP_Commission__c</fullName>
    <label>EP Commission %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>