force-app/main/default/objects/os_Closing__c/fields/os_EP_Commission_Received__c.field-meta.xml
<CustomField>
    <fullName>os_EP_Commission_Received__c</fullName>
    <label>EP Commission Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>