force-app/main/default/objects/os_Closing__c/fields/os_Escrow_Instructions__c.field-meta.xml
<CustomField>
    <fullName>os_Escrow_Instructions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escrow Instructions</label>
    <type>Checkbox</type>
</CustomField>