force-app/main/default/objects/os_Closing__c/fields/os_Escrow_Instructions_Date__c.field-meta.xml
<CustomField>
    <fullName>os_Escrow_Instructions_Date__c</fullName>
    <label>Escrow Instructions Date</label>
    <type>Date</type>
</CustomField>