force-app/main/default/objects/os_Closing__c/fields/os_Executed_Date__c.field-meta.xml
<CustomField>
    <fullName>os_Executed_Date__c</fullName>
    <label>Executed Date</label>
    <type>Date</type>
</CustomField>