force-app/main/default/objects/os_Closing__c/fields/os_External_Commission_Comments__c.field-meta.xml
<CustomField>
    <fullName>os_External_Commission_Comments__c</fullName>
    <label>External Commission Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>