force-app/main/default/objects/os_Closing__c/fields/os_External_Party_Commission__c.field-meta.xml
<CustomField>
    <fullName>os_External_Party_Commission__c</fullName>
    <label>External Party Commission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>