force-app/main/default/objects/os_Closing__c/fields/os_External_Party_Name__c.field-meta.xml
<CustomField>
    <fullName>os_External_Party_Name__c</fullName>
    <label>External Party Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>