force-app/main/default/objects/os_Closing__c/fields/os_EXTERNAREFLID__c.field-meta.xml
<CustomField>
    <fullName>os_EXTERNAREFLID__c</fullName>
    <label>EXTERNAREFLID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>