force-app/main/default/objects/os_Closing__c/fields/os_Full_Payment__c.field-meta.xml
<CustomField>
    <fullName>os_Full_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Full Payment</label>
    <type>Checkbox</type>
</CustomField>