force-app/main/default/objects/os_Closing__c/fields/os_Furnished__c.field-meta.xml
<CustomField>
    <fullName>os_Furnished__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Furnished</label>
    <type>Checkbox</type>
</CustomField>