force-app/main/default/objects/os_Closing__c/fields/os_gsir_buyers_lender__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_buyers_lender__c</fullName>
    <label>Lending Bank</label>
    <length>20</length>
    <type>Text</type>
</CustomField>