force-app/main/default/objects/os_Closing__c/fields/os_gsir_BuyerTenant__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_BuyerTenant__c</fullName>
    <description>04.04.19/US: Help Field for Dashboards.</description>
    <formula>IF( RecordType.Name = &quot;Sale&quot;, os_Buyer_Tenant__r.FirstName &amp; &quot; &quot; &amp; os_Buyer_Tenant__r.LastName , os_Renter__r.FirstName &amp; &quot; &quot; &amp; os_Renter__r.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer/Tenant</label>
    <type>Text</type>
</CustomField>