force-app/main/default/objects/os_Closing__c/fields/os_gsir_closing_broker_split__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_closing_broker_split__c</fullName>
    <label>Closing Broker Split %</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>