force-app/main/default/objects/os_Closing__c/fields/os_gsir_commision_payable_by_buyer_tenan__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_commision_payable_by_buyer_tenan__c</fullName>
    <label>Commission Payable by Buyer / Tenant</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>