force-app/main/default/objects/os_Closing__c/fields/os_gsir_commission_payableBySeller_landl__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_commission_payableBySeller_landl__c</fullName>
    <label>Commission Payable by Seller / Landlord</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>