force-app/main/default/objects/os_Closing__c/fields/os_gsir_conveyancing_fee_paid_by__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_conveyancing_fee_paid_by__c</fullName>
    <label>Conveyancing Fee Paid By:</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Buyer</fullName>
            </value>
            <value>
                <fullName>Seller</fullName>
            </value>
            <value>
                <fullName>Buyer-Seller</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>