force-app/main/default/objects/os_Closing__c/fields/os_gsir_developer__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_developer__c</fullName>
    <label>Developer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abwab Real Estate Limited Co (L.L.C)</fullName>
            </value>
            <value>
                <fullName>Al Barari</fullName>
            </value>
            <value>
                <fullName>Aldar</fullName>
            </value>
            <value>
                <fullName>Alpago Properties L.L.C</fullName>
            </value>
            <value>
                <fullName>Al Tamimi Investments Limited</fullName>
            </value>
            <value>
                <fullName>Arada Developments Llc - Dubai Branch</fullName>
            </value>
            <value>
                <fullName>Atlantis The Palm 2 Development L.L.C</fullName>
            </value>
            <value>
                <fullName>Azizi Developments L.L.C</fullName>
            </value>
            <value>
                <fullName>Binghatti Developers Fze</fullName>
            </value>
            <value>
                <fullName>Chi Development Group Limited</fullName>
            </value>
            <value>
                <fullName>Chi Sol Real Estate Development L.L.C</fullName>
            </value>
            <value>
                <fullName>Damac</fullName>
            </value>
            <value>
                <fullName>Danube Properties Development L.L.C</fullName>
            </value>
            <value>
                <fullName>Deyaar Development (P.J.S.C)</fullName>
            </value>
            <value>
                <fullName>District One - Fz</fullName>
            </value>
            <value>
                <fullName>Dubai Hills Estate L.L.C</fullName>
            </value>
            <value>
                <fullName>Dubai Properties</fullName>
            </value>
            <value>
                <fullName>Ellington</fullName>
            </value>
            <value>
                <fullName>Emaar</fullName>
            </value>
            <value>
                <fullName>Emaar Development P.J.S.C.</fullName>
            </value>
            <value>
                <fullName>Forum Group Dmcc</fullName>
            </value>
            <value>
                <fullName>G&amp;Co</fullName>
            </value>
            <value>
                <fullName>G&amp;Co Real Estate Development Llc - Fz</fullName>
            </value>
            <value>
                <fullName>Ithra Dubai</fullName>
            </value>
            <value>
                <fullName>Jumeira Bay L.L.C</fullName>
            </value>
            <value>
                <fullName>Jumeirah Islands Co. (L.L.C)</fullName>
            </value>
            <value>
                <fullName>Jumeirah Luxury Living L.L.C</fullName>
            </value>
            <value>
                <fullName>Kerzner</fullName>
            </value>
            <value>
                <fullName>Liv</fullName>
            </value>
            <value>
                <fullName>L I V Real Estate Development L.L.C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>