force-app/main/default/objects/os_Closing__c/fields/os_gsir_finance_conditional__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_finance_conditional__c</fullName>
    <label>Finance Conditional</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Na</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>