force-app/main/default/objects/os_Closing__c/fields/os_gsir_finance_contribution__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_finance_contribution__c</fullName>
    <label>Finance Contribution</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>