force-app/main/default/objects/os_Closing__c/fields/os_gsir_fourth_broker__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_fourth_broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fourth Broker</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FourthBroker</relationshipName>
    <type>Lookup</type>
</CustomField>