force-app/main/default/objects/os_Closing__c/fields/os_gsir_fourth_broker_split__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_fourth_broker_split__c</fullName>
    <label>Fourth broker split %</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>