force-app/main/default/objects/os_Closing__c/fields/os_gsir_freehold_leasehold__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_freehold_leasehold__c</fullName>
    <label>Freehold / Leasehold</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Freehold</fullName>
            </value>
            <value>
                <fullName>Leasehold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>