force-app/main/default/objects/os_Closing__c/fields/os_GSIR_LISTING_REF__c.field-meta.xml
<CustomField>
    <fullName>os_GSIR_LISTING_REF__c</fullName>
    <label>Gsir Listing Ref</label>
    <length>50</length>
    <type>Text</type>
</CustomField>