force-app/main/default/objects/os_Closing__c/fields/os_gsir_paid_to_developer__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_paid_to_developer__c</fullName>
    <label>Paid to Developer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>