force-app/main/default/objects/os_Closing__c/fields/os_gsir_payable_seller__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_payable_seller__c</fullName>
    <label>Payable to Seller</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>