force-app/main/default/objects/os_Closing__c/fields/os_gsir_poa_representation__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_poa_representation__c</fullName>
    <label>POA Representation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Buyer</fullName>
            </value>
            <value>
                <fullName>Seller</fullName>
            </value>
            <value>
                <fullName>Buyer-Seller</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>