force-app/main/default/objects/os_Closing__c/fields/os_gsir_rental_total_commission_amount__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_rental_total_commission_amount__c</fullName>
    <label>Rental total commission amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>