force-app/main/default/objects/os_Closing__c/fields/os_gsir_second_broker__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_second_broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Second Broker</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SecondBroker</relationshipName>
    <type>Lookup</type>
</CustomField>