force-app/main/default/objects/os_Closing__c/fields/os_GSIR_SECOND_BROKER_NAME__c.field-meta.xml
<CustomField>
    <fullName>os_GSIR_SECOND_BROKER_NAME__c</fullName>
    <label>Gsir Second Broker Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>