force-app/main/default/objects/os_Closing__c/fields/os_gsir_security_requested__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_security_requested__c</fullName>
    <label>Security Requested</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Manual Block</fullName>
            </value>
            <value>
                <fullName>Manual Block With POA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>