force-app/main/default/objects/os_Closing__c/fields/os_gsir_SellerLandlord__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_SellerLandlord__c</fullName>
    <formula>IF( RecordType.Name = &quot;Sale&quot;, os_Seller__r.FirstName &amp; &quot; &quot; &amp; os_Seller__r.LastName,  os_Landlord__r.FirstName &amp; &quot; &quot; &amp; os_Landlord__r.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seller/Landlord</label>
    <type>Text</type>
</CustomField>