force-app/main/default/objects/os_Closing__c/fields/os_gsir_sellers_lender__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_sellers_lender__c</fullName>
    <label>Seller&apos;s Lender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Test 1</fullName>
            </value>
            <value>
                <fullName>Test 2</fullName>
            </value>
            <value>
                <fullName>Test 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>