force-app/main/default/objects/os_Closing__c/fields/os_gsir_stage__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_stage__c</fullName>
    <label>Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>