force-app/main/default/objects/os_Closing__c/fields/os_gsir_third_broker_split_amount__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_third_broker_split_amount__c</fullName>
    <label>Third broker split amount</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>