force-app/main/default/objects/os_Closing__c/fields/os_gsir_title_deed_no__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_title_deed_no__c</fullName>
    <label>Title Deed No.</label>
    <length>14</length>
    <type>Text</type>
</CustomField>