force-app/main/default/objects/os_Closing__c/fields/os_gsir_transfer_fee_buyer__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_transfer_fee_buyer__c</fullName>
    <label>Transfer Fee (Buyer)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>