force-app/main/default/objects/os_Closing__c/fields/os_gsir_vacant_on_transfer__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_vacant_on_transfer__c</fullName>
    <label>Status On Transfer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tenanted on Transfer</fullName>
            </value>
            <value>
                <fullName>Owner_Occupied_On_Transfer</fullName>
            </value>
            <value>
                <fullName>Under_Construction</fullName>
            </value>
            <value>
                <fullName>Vacant on Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>