force-app/main/default/objects/os_Closing__c/fields/os_GUNTHER__c.field-meta.xml
<CustomField>
    <fullName>os_GUNTHER__c</fullName>
    <label>Gunther Import</label>
    <length>20</length>
    <type>Text</type>
</CustomField>