force-app/main/default/objects/os_Closing__c/fields/os_Hide_Closing__c.field-meta.xml
<CustomField>
    <fullName>os_Hide_Closing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Closing</label>
    <type>Checkbox</type>
</CustomField>