force-app/main/default/objects/os_Closing__c/fields/os_Industry__c.field-meta.xml
<CustomField>
    <fullName>os_Industry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Industry</label>
    <referenceTo>os_AML_Parameter__c</referenceTo>
    <relationshipName>Industry</relationshipName>
    <type>Lookup</type>
</CustomField>