force-app/main/default/objects/os_Closing__c/fields/os_Inquiry_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>os_Inquiry_Created_Date__c</fullName>
    <formula>IF( RecordType.Name = &quot;Sale&quot;, TEXT(os_Winning_Inquiry__r.CreatedDate) , TEXT(os_Winning_Inquiry__r.CreatedDate) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inquiry Created Date</label>
    <type>Text</type>
</CustomField>