force-app/main/default/objects/os_Closing__c/fields/os_Inquiry_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>os_Inquiry_Record_Type__c</fullName>
    <formula>os_Winning_Inquiry__r.RecordTypeId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inquiry Record Type</label>
    <type>Text</type>
</CustomField>