force-app/main/default/objects/os_Closing__c/fields/os_Internal_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>os_Internal_Commission_Amount__c</fullName>
    <formula>os_Total_Commission_Amount__c -  os_External_Party_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>