force-app/main/default/objects/os_Closing__c/fields/os_Is_Lux_Job_Completed__c.field-meta.xml
<CustomField>
    <fullName>os_Is_Lux_Job_Completed__c</fullName>
    <formula>IF( os_Amount_Colleted__c &gt;  os_Unit__r.os_Project__r.os_Job_Completion__c  ,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Lux Job Completed?</label>
    <type>Checkbox</type>
</CustomField>