force-app/main/default/objects/os_Closing__c/fields/os_KYC__c.field-meta.xml
<CustomField>
    <fullName>os_KYC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KYC</label>
    <type>Checkbox</type>
</CustomField>