force-app/main/default/objects/os_Closing__c/fields/os_Landlord__c.field-meta.xml
<CustomField>
    <fullName>os_Landlord__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Landlord</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Landlord</relationshipName>
    <type>Lookup</type>
</CustomField>