force-app/main/default/objects/os_Closing__c/fields/os_Lead_Source_Winning_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>os_Lead_Source_Winning_Inquiry__c</fullName>
    <formula>IF( RecordType.Name = &quot;Sale&quot;, TEXT( os_Winning_Inquiry__r.os_gsir_lead_source__c ) , TEXT(os_Winning_Inquiry__r.os_gsir_lead_source__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Source [Winning Inquiry]</label>
    <type>Text</type>
</CustomField>