force-app/main/default/objects/os_Closing__c/fields/os_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>os_Legal_Name__c</fullName>
    <formula>os_Buyer_Tenant__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Name</label>
    <type>Text</type>
</CustomField>