force-app/main/default/objects/os_Closing__c/fields/os_Listing_Address_Property__c.field-meta.xml
<CustomField>
    <fullName>os_Listing_Address_Property__c</fullName>
    <formula>os_Listing__r.os_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing Address Property</label>
    <type>Text</type>
</CustomField>