force-app/main/default/objects/os_Closing__c/fields/os_Listing_Agency_Contact__c.field-meta.xml
<CustomField>
    <fullName>os_Listing_Agency_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Agency Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>ExternalAgencyContact</relationshipName>
    <type>Lookup</type>
</CustomField>